--- a/Dockerfile.arm7
+++ b/Dockerfile.arm7
@@ -13,5 +13,5 @@ FROM arm32v7/alpine:latest
 WORKDIR /build
 COPY --from=builder /build/build .
 
-ENV MONKEBASE_CONNECTION ""
+ENV SCYTHER_CONNECTION ""
 ENTRYPOINT ./build
